Fixed bug where modified volumes were cancelling themeselves out and always returning 0
Added function to reset list of the values to be used to scale
Changed modified_volume dictionary to contain values not lists of one value

2/8/18
Added fully randomized parameters for each bot run
Fixed parser to only read lines of output that contain a special character printed right before the parameter list
Added  method reWriteParameters to rewrite the paramters onto the original text file they were pulled from after all the tests
Updated CryptoEvalutator to have have the values and MaxValues lists as well as the capability (From AutoTrader)
Added method stringtoDict that takes the string passed (should be the string conversion of a dictionary) and parses it and returns a new dictionary object
Added method reformatLine to takes the special string grabbed from output that contains the returned parameters. And removes the edge definer strings

2/9/18
Fixed the auto trader modified volume function so that it appropriately splits the volume up into separate cases where if it is positive or negative the majority of the
volume associated with that interval is considered "positive"  or "negative" respectively and the minority is considered "negative" or "positive" respectively

2/10/18
Made it so that neither buybin nor sellbin can be called if either the current crypto or the past one are nothing

2/11/18
Changed getBinancePrice to use the price api call instead of all prices so it no longer needs to iterate until it finds the coin just gets the specific coins most recent price.
Made synctatic fixes to auto trader
Fixed bug where auto trader was not printing the endprice when checking intervals
Added volume scaling by price for the update crypto in auto trader
Made a CryptoStatAnalysis class that is an object that stores decisions made by the trading bots and evaluates them and prints the results