@@ -9,6 +9,9 @@
 #todo make a true weighted mean function that pulls the most recent price every minute from the current crypto and calculates the new mean (if possible pull
 #todo continued... every crypto and store the mean in a list so it can be continuously calculated
 
+#import for python3 to increase compatability
+from __future__ import absolute_import
+
 import requests
 import hmac
 import hashlib
@@ -17,9 +20,9 @@ import math
 import datetime
 import os.path
 
-from multiprocessing import Pool
-from PrivateData import api_key, secret_key, solume_api_key
 
+from PrivateData import api_key, secret_key, solume_api_key
+import CryptoStatAnalysis
 
 try:
     from urlib import urlencode
@@ -356,8 +359,7 @@ def binStepSize():
         stepsizes.update(temp)
 
 
-#add in the weight todo
-
+#todo add in a weight
 #calculates the weighted moving average over the specified interval for a crypto currency
 
 def setWeightedMovingAverage(currency, interval, starttime, endtime):
@@ -910,6 +912,7 @@ def main():
     currentCurrency = ''
     x = 0
 
+    cryptoRunStats = CryptoStatAnalysis.CryptoStatsAnalysis(1, 'NT')
 
     info = requests.get("https://api.binance.com/api/v1/exchangeInfo")
     print(info.text)
@@ -945,19 +948,21 @@ def main():
         currentCurrency = priceChecker()
 
         print("Curr currency main " + str(currentCurrency))
-        if(oldCurrency != currentCurrency and oldCurrency != '' and currentCurrency != ''):
+        if(oldCurrency != currentCurrency and oldCurrency != ''):
             sellBin(oldCurrency)
             print("THIS RUN SOLD AT: {}".format(datetime.datetime.time(datetime.datetime.now())))
             file.write("THIS RUN SOLD AT: {} \n".format(datetime.datetime.time(datetime.datetime.now())))
 
-        if(oldCurrency != currentCurrency and currentCurrency != '' and oldCurrency != ''):
+
+
+        if(oldCurrency != currentCurrency and currentCurrency != ''):
             buyBin(currentCurrency)
             print("THIS RUN BOUGHT AT: {}".format(datetime.datetime.time(datetime.datetime.now())))
             file.write("THIS RUN BOUGHT AT: {}".format(datetime.datetime.time(datetime.datetime.now())))
 
         #while statement is more flexible way to wait for a period of time or a restart
         # restart could be caused by a met failure condition or a met sustained one
-        while(t < PARAMETERS['MAX_TIME_CYCLE'] and RESTART == 0 and RESTART_TN == 0 and RESTART_LOW == 0 and currentCurrency != '' and oldCurrency != ''):
+        while(t < PARAMETERS['MAX_TIME_CYCLE'] and RESTART == 0 and RESTART_TN == 0 and RESTART_LOW == 0 and currentCurrency != ''):
             time.sleep(1)
 
             if(t % PARAMETERS['WAIT_FOR_CHECK_FAILURE'] == 0 and t != 0):
@@ -971,7 +976,7 @@ def main():
             t+=1
 
         #just wait 300 seconds before running through again if no crypto was chosen
-        if currentCurrency == '':
+        if currentCurrency == '' or (currentCurrency == oldCurrency):
             time.sleep(300)
 
 
@@ -988,6 +993,7 @@ def main():
             EXIT = checkExitCondition(currentCurrency)
         x+=1
 
+    cryptoRunStats.newStats()
     print("Cumualtive percent change over the life of all cryptos owneed so far {}".format(PARAMETERS['CUMULATIVE_PERCENT_CHANGE_STORE']))
     file.write("Cumualtive percent change over the life of all cryptos owneed so far {} \n".format(PARAMETERS['CUMULATIVE_PERCENT_CHANGE_STORE']))
     sellBin(currentCurrency)
