@@ -16,8 +16,11 @@ cryptoClosePriceData = {}
 cryptoVolumeData = {}
 
 #path to save the different text files in
-cryptoPaths = r'C:\Users\DrewG\Documents\GitHub\Crypto\CryptoData'
-logPath = r'C:\Users\DrewG\Documents\GitHub\Crypto\Logs\dlog.txt'
+#cryptoPaths = r'C:\Users\DrewG\Documents\GitHub\Crypto\CryptoData'
+cryptoPaths = r'C:\Users\katso\Documents\GitHub\Crypto\CryptoData'
+#logPath = r'C:\Users\DrewG\Documents\GitHub\Crypto\Logs\dlog.txt'
+logPath = r'C:\Users\katso\Documents\GitHub\Crypto\Logs\dlog.txt'
+
 #one day in ms
 ONE_DAY = 86400000
 ONE_THIRD_DAY = 28800000
