@@ -46,3 +46,7 @@ Made synctatic fixes to auto trader
 Fixed bug where auto trader was not printing the endprice when checking intervals
 Added volume scaling by price for the update crypto in auto trader
 Made a CryptoStatAnalysis class that is an object that stores decisions made by the trading bots and evaluates them and prints the results
+Removed the file writing from CryptoEvaluator
+Added special import to AutoTrader and an instance of the CrptoStatAnalysis class
+Added initialization variables for the CryptoStatAnalyis class that hold score, mean percent price change, and different choice data
+Added another class in CryptoStatAnalysis that holds different stats for each crypto
